--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.16.0",
-    "next": "latest",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
